--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -973,7 +973,7 @@
 		Simplified_Chinese:"显示工作地块",
 		Traditional_Chinese:"顯示工作地區",
 		Czech:"Zobrazit obdělávané políčka"
-		Ukrainian:"Показати оброблювані комірки"
+		Ukrainian:"Показати оброблювані клітини"
 		Russian:"Показать обрабатываемые клетки"
 }
 
