--- a/android/assets/jsons/Translations/Buildings.json
+++ b/android/assets/jsons/Translations/Buildings.json
@@ -1128,7 +1128,7 @@
 }
 
 	"+2 Science from each worked Jungle tile":{
-		Italian:"+2 Scienza dalle Giungle"
+		Italian:"+2 Scienza per ogni casella di Giungla sfruttata"
 		Russian:"Джунгли обеспечивают +2 науки"
 		French:"Jungles fournissent +2 science"
 		Romanian:"Junglele oferă +2 știință"
@@ -1948,12 +1948,15 @@
 	}
 	
 	"Brandenburg Gate":{
+		Italian:"Porta di Brandeburgo"
 	}
 	
 	"Free Great General appears near the Capital":{
+		Italian:"Appare un Grande Generale vicino alla Capitale"
 	}
 	
 	"'Pale Death beats equally at the poor man's gate and at the palaces of kings.'  - Horace":{
+		Italian:"'La pallida morte batte ugualmente alla porta del povero e al palazzo del re.' - Orazio"
 	}
 
 	"Broadcast Tower":{
