--- a/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
+++ b/android/assets/jsons/Translations/Diplomacy,Trade,Nations.json
@@ -87,7 +87,6 @@
 		Russian:"[leaderName] из [nation]"
 		Romanian:"[leaderName] de [nation]"
                 Polish:"[leaderName], władca cywilizacji [nation]",
-
 		Czech:"[leaderName], [nation]"
 }
 
@@ -1440,6 +1439,24 @@
 		Russian:"Сразу может погружаться на корабль, а также плавать по побережьям и океанам. +1 к обзору при погружении на корабль. +10% к силе если находинтся в радиусе 2х клеток от Моаи."
 }
 
+	"Siam":{
+		Italian:"Siam"//Same as in Italian
+		French:"Siam"
+		Portuguese:"Siam" //not sure but will do
+		Czech:"Siam"
+}
+
+	"Ramkhamhaeng":{
+		Italian:"Ramkhamhaeng" //Same as in Italian
+}
+
+	"Food and Culture from friendly City-States increased by 50%.":{
+		Italian:"+50% Cibo e Cultura ricevute dalle Città-Stato amiche o alleate."
+		Portuguese:"Comida e cultura de cidades-estado amigas aumentada em 50%."
+		French:"La Nourriture et la Culture fournit par les cités-états sont augmentées de 50%"
+		Czech:"Jídlo a Kulturní body z spřátelených Městských států se zvednou o 50%."
+}
+
 	/*
 	"Aztecs":{
 		Italian:"Azteca"
@@ -1492,20 +1509,6 @@
 		Portuguese:"Força de combate adicional de +30% quando lutando cidades-estado ou atacando uma cidade-estado. Um movimento extra para todas as unidades montadas"
 		French:"+30% Force d'attaque lors des combats contre les villes ou unités des Cités-états. +1 mouvement pour les unités montées."
 		Czech:"+30% bojové síly při boji s jednotkami městského státu, nebo útoku na městský stát. +1 Pohyb pro všechny jízdní jednotky."
-}
-
-	"Siam":{
-		Italian:"Siam"
-		French:"Siam"
-		Portuguese:"Siam" //not sure but will do
-		Czech:"Siam"
-}
-
-	"Food and Culture from friendly City-States increased by 50%.":{
-		Italian:"+50% Cibo e Cultura ricevute dalle Città-Stato amiche o alleate."
-		Portuguese:"Comida e cultura de cidades-estado amigas aumentada em 50%."
-		French:"La Nourriture et la Culture fournit par les cités-états sont augmentées de 50%"
-		Czech:"Jídlo a Kulturní body z spřátelených Městských států se zvednou o 50%."
 }
 
 	"Songhai":{
