--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -802,7 +802,9 @@
 		Czech:"Lučištník na velbloudu"
 	}
 	
-	"Naresuan's Elephant":{	}
+	"Naresuan's Elephant":{
+		Italian:"Elefante di Naresuan"	
+	}
 
 	"Samurai":{
 		Italian:"Samurai" //Same as in Italian
