--- a/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
+++ b/android/assets/jsons/Translations/NewGame,SaveGame,LoadGame,Options.json
@@ -134,9 +134,9 @@
 
 	"HIGHLY EXPERIMENTAL - YOU HAVE BEEN WARNED!": {
 		Italian:"IN FASE DI PRODUZIONE - TI ABBIAMO AVVERTITO!"
-		Simplified_Chinese:"⚠︎警告！试验性功能！"
+		Simplified_Chinese:"\u26A0警告！试验性功能！"
 		Ukrainian:"ПЕРЕБУВАЄ В РОЗРОБЦІ — ВАС ПОПЕРЕДЖЕНО!"
-		Traditional_Chinese:"⚠︎警告！實驗性功能！"
+		Traditional_Chinese:"\u26A0警告！實驗性功能！"
 		Czech:"VYSOCE EXPERIMENTÁLNÍ - BYLI JSTE VAROVÁNÍ!"
 		Russian:"В РАЗРАБОТКЕ И НЕСТАБИЛЬНО - ВЫ ПРЕДУПРЕЖДЕНЫ!"
 }
